fixed navbar alignment

--- a/index.css
+++ b/index.css
@@ -1,22 +1,24 @@
+* {
+	font-family:Open Sans,Arial;
+	padding: 0;
+	margin: 0;
+}
+html {
+	background-color: #eee;
+	margin-top: 30px;
+}
 .topText {
 	width:  100%;
 	height: 100%;
-	margin: 0;
+	margin-top: 30px;
 	border: 0;
 	overflow: hidden;
 	display: block;
 	text-align: center;
 }
-html {
-	background-color: #eee;
-	font-family:Open Sans,Arial;
-	margin-top: 30px;
-}
 .navbar {
-	float: left;
-	overflow: hidden;
 	position: fixed;
-	width: 110%;
+	width: 100%;
 	top: 0;
 	background-color: #bbb;
 	font-family:Open Sans,Arial;
